// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Button 1`] = `
<Styled(div) as="button"
             variant="primary"
             __themekey="buttons"
             __css="[object Object]"
>
  Hello World!
</Styled(div)>
`;

exports[`Storyshots Button Danger Button 1`] = `
<Styled(div) as="button"
             variant="danger"
             __themekey="buttons"
             __css="[object Object]"
>
  Danger!
</Styled(div)>
`;

exports[`Storyshots Button Disabled Button 1`] = `
<Styled(div) as="button"
             variant="primary"
             disabled
             __themekey="buttons"
             __css="[object Object]"
>
  Disabled
</Styled(div)>
`;

exports[`Storyshots Navbar Navbar 1`] = `
<EmotionCssPropInternal as="nav">
  <NavElement as="a"
              href="#"
  >
    Nav1
  </NavElement>
  <NavElement as="a"
              href="#"
  >
    Nav2
  </NavElement>
</EmotionCssPropInternal>
`;

exports[`Storyshots Navbar Selected Nav Element 1`] = `
<EmotionCssPropInternal as="nav">
  <NavElement active
              as="a"
              href="#"
  >
    Nav1
  </NavElement>
  <NavElement as="a"
              href="#"
  >
    Nav2
  </NavElement>
</EmotionCssPropInternal>
`;
